--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -269,7 +269,23 @@ color: #fff
   }
 }
 
-@media(max-width: 500px) {
-
+@media(min-width: 500px) {
+  .navbar-wrapper{
+    flex-wrap: nowrap;
+    .navbar-menu{
+      width: 35%;
+      display: flex;
+      flex-direction: row-reverse;
+    }
+  
+    .navbar-right{
+      width:65%;
+      justify-content: flex-end;
+      flex-wrap: nowrap;
+       li > a{
+        padding: 7px;
+      }
+    }
+  }
 
 }
