--- a/src/scss/pages/list-gear.scss
+++ b/src/scss/pages/list-gear.scss
@@ -145,6 +145,7 @@
 }
 .list-gear .list-gear-body .wrraper {
   padding: 5px 10px;
+  margin-bottom: 5rem;
 }
 }
 
@@ -210,10 +211,7 @@
   
 }
 .edit {
-  // width: 30px;
-  // height: 30px;
-  // background-color: #ddd;
-  // border-radius: 50%;
+
   background-image: url('/images/Icons/Group.svg');
 }
 }
