--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -96,5 +96,107 @@
 @media(max-width: 500px) {
   .auth-sidemenu {
     width: 100%;
+    display: none
+  }
+
+  .login {
+    margin: 0;
+
+    .header {
+      font-size: 27px !important;
+      line-height: 39px;
+      text-align: center;
+      color: #3A3A3A;
+    }
+
+    .social-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: auto;
+      margin-right: auto;
+
+      .btn-social {
+        min-width: 50px !important;
+        width: 50px !important;
+        padding: 12px 5px;
+
+        i {
+          margin: 0;
+          font-size: 24px
+        }
+
+        > span > span {
+          display: none
+        }
+
+        &.btn-twitter {
+          margin-left: 40px !important;
+          margin-right: 50px
+        }
+      }
+    }
+
+    .login-or-divider {
+      display: none
+    }
+
+    .theme-form .theme-form-field {
+      width: 90%;
+      margin-left: 5%;
+    }
+
+    .custom-input {
+
+      .form-control {
+        text-align: center;
+      }
+
+      .form-control::-webkit-input-placeholder {
+        font-size: 16px
+      }
+
+      .form-control::-moz-placeholder {
+        font-size: 16px
+      }
+
+      .placeholder-label {
+        width: 100%;
+        left: 0;
+        text-align: center;
+        top: -16px;
+        font-size: 11px;
+      }
+    }
+
+    .login-remember-input {
+      margin: 45px 20% !important;
+      width: 80%
+    }
+
+    .theme-btn-submit {
+      width: 80%;
+      margin-left: 10%
+    }
+
+    .theme-form-link {
+      text-align: center !important;
+      width: 90% !important;
+    }
+
+    .flex-row.signup-link {
+      width: 90%;
+      margin-left: 5%;
+
+      > span {
+        margin: 0 auto;
+        display: table;
+      }
+
+      > button {
+        margin: 0 auto;
+        display: table;
+        padding: 2px 10px
+      }
+    }
   }
 }
