--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -98,14 +98,7 @@ footer {
     .subscribe-btn {
       min-width: 64px;
     }
-    .social-buttons .btn-social span {
-      font-size: 25px;
-    }
-    .social-buttons .btn-social {
-      font-size: 18px;
-      width: 95%;
-      font-weight: 900;
-  }
+  
   }
 .news-letter {
 
@@ -114,4 +107,48 @@ footer {
   }
 }
 
+}
+
+.social-buttons {
+  .btn-social{
+    padding: 0;
+    height: 50px;
+    i{
+      width: 50px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &.fa-facebook-f{
+        background: rgba(255, 255, 255, 0.1);
+
+      }
+      &.fa-vimeo-v{
+        background: rgba(255, 255, 255, 0.1);
+      }
+      &.fa-instagram{
+        background: rgba(255, 255, 255, 0.1);
+      }
+      
+    }
+    span{
+      width: calc(100% - 50px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+    }
+  }
+}
+@media (max-width:500px){
+  .social-buttons {
+    .btn-social{
+      width: 290px;
+    }
+  }
+  .social-buttons .btn-social span {
+    margin-left: 25px;
+    justify-content: flex-start !important;
+    font-size: 16px;
+  }
 }
