--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -9,10 +9,43 @@
     align-items: flex-start;
   }
 
+  .theme-form-dropdown {
+
+    .btn {
+      border: 0;
+      padding: 5px 10px 5px;
+      opacity: 1;
+      border-bottom: 1px solid lightgrey;
+      color: #98989b !important;
+      left: 0;
+      top: 0;
+      transform: none;
+      position: relative;
+      width: 90%;
+
+      &:focus {
+        background-color: #fff !important;
+        box-shadow: none;
+      }
+    }
+  }
+
+  .theme-continue-btn {
+    padding: 4px 30px;
+    font-weight: 600;
+  }
+
+  .theme-form-field {
+    .custom-input {
+      width: 90%
+    }
+  }
+
   .add-gear-progress {
     display: flex;
     width: 500px;
     margin-bottom: 15px;
+    z-index: 0;
 
     .add-gear-progress-item {
       display: flex;
@@ -40,7 +73,7 @@
         width: 100%;
         height: 1px;
         border-top: 1px solid $primary-color;
-        left: -50%;
+        left: -38%;
         top: 16px;
       }
     }
@@ -88,6 +121,7 @@
   }
 
   .info-right-container {
+    padding-top: 15px;
     margin-left: 15px;
   }
 
@@ -213,5 +247,75 @@
         color: $primary-color;
       }
     }
+  }
+}
+
+@media(max-width: 500px) {
+
+  .header {
+    font-size: 27px;
+    font-weight:  900;
+    margin-bottom: 39px;
+  }
+
+  .add-gear-progress {
+    width: 100% !important;
+  }
+
+  .flex-row {
+    .theme-column {
+      width: 100%;
+      margin-left: 0 !important;
+
+      .theme-form-field {
+        width: 90%;
+        margin-left: 5%;
+        margin-bottom: 20px;
+
+        &.dropdown {
+          margin-left: 5%
+        }
+
+        .btn {
+          width: 100%;
+          font-weight: 600
+        }
+
+        .custom-input {
+          width: 100%;
+
+          .form-control::placeholder {
+            font-weight: 600;
+            opacity: 1;
+            color: #98989b !important;
+          }
+        }
+      }
+    }
+  }
+
+  .type-tabs {
+    width: 94%;
+    margin-left: 3%;
+    white-space: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+
+    label {
+      padding: 10px 15px !important;
+    }
+  }
+
+  .type-tabs::-webkit-scrollbar {
+    display: none;
+  }
+
+  .theme-continue-btn {
+    position: fixed;
+    width: 90%;
+    bottom: 10px;
+    left: 5%;
+    z-index: 1000;
+    padding: 13px !important;
   }
 }
