--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -1,3 +1,31 @@
+.login.success-message {
+  .header {
+    font-size: 43px !important;
+
+    i {
+      font-size: 35px !important;
+    }
+  }
+
+  .subheader {
+    font-size: 14px;
+    color: #a8a4a4;
+    margin-bottom: 10px;
+
+    br {
+      display: none;
+    }
+  }
+
+  .navigation-buttons {
+    button {
+      padding: 2px 40px;
+      width: 200px;
+      font-weight: 600;
+    }
+  }
+}
+
 .login.register {
   margin-left: 60px;
   padding-top: 60px;
@@ -88,6 +116,37 @@
 }
 
 @media(max-width: 500px) {
+  .login.success-message {
+    .subheader {
+        width: 100%;
+        text-align: center;
+        margin: 30px 0;
+        br {
+          display: block;
+        }
+    }
+
+    .navigation-buttons {
+      margin-left: auto;
+      margin-right: auto;
+
+      button {
+        padding: 2px 15px !important;
+        width: 150px;
+      }
+    }
+
+    .theme-btn-submit {
+      width: 90%;
+      margin-left: 5%
+    }
+
+    .theme-btn-primary.theme-btn-submit.theme-btn-link {
+      margin-left: 5% !important;
+      padding: 4px !important
+    }
+  }
+
   .login.register {
     padding-top: 0;
     margin-left: 0;
