--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -162,7 +162,7 @@
             height: 180px;
           }
         }
-
+     
         .card-body {
           flex-basis: 75%;
           padding: 0;
@@ -374,7 +374,18 @@
   margin-bottom: 1.5rem;
   position: relative;
   transition: all 0.6s ease-in-out;
-
+  .card-checked{
+    position: absolute;
+    top:15px;
+    right: 15px;
+    font-size: 18px;
+    color: $primary-color;
+    width: 18px;
+    height: 18px;
+  background: #ffffff;
+  border-radius: 50%;
+  line-height: 0
+  }
   .card-img-top {
     padding: 10px;
     height: 200px;
@@ -419,27 +430,41 @@
     }
 
     .buttons {
-      display: none;
+      display: flex;
       position: absolute;
-      bottom: -35px;
+      bottom: -40px;
       z-index: 444;
       left: 0;
       width: 100%;
+      height: 40px;
+      opacity: 0;
+      button{
+        transform: none;
+        position: static;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        padding:0;
+      }
 
       .cart {
-        width: 80%;
+        width: calc(100% - 40px);
         border-radius: 0;
         background-color: $primary-color;
         border: none;
         color: $white;
+
       }
 
       .fav {
-        width: 20%;
+        width: 40px;
         border: none;
         border-radius: 0;
         background-color: #f9ebf0;
         color: $primary-color;
+    
+        
+
       }
     }
   }
@@ -448,7 +473,10 @@
     transition: all 0.6s ease-in-out;
 
     .buttons {
-      display: block;
+      opacity: 1;
+      .btn{
+        opacity: 1;
+      }
     }
   }
 }
