added rent gear details and updated rent gear page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -32,5 +32,6 @@
 @import 'pages/payment';
 @import 'pages/list-gear';
 @import 'pages/rent-gear';
+@import 'pages/rent-gear-detail';
 @import 'pages/partner';
 @import 'pages/FAQ';
