--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -30,8 +30,12 @@
 @import 'pages/cart';
 @import 'pages/checkout';
 @import 'pages/payment';
-@import 'pages/list-gear';
 @import 'pages/rent-gear';
 @import 'pages/rent-gear-detail';
+@import 'pages/list-gear';
+@import 'components/cart-modal';
+@import 'components/custom-daterange-picker';
 @import 'pages/partner';
 @import 'pages/FAQ';
+@import 'pages/editgear';
+
