--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -11,8 +11,6 @@
   border: 1px solid transparent;
   padding: 8px 15px;
   line-height: 1.5;
-  min-width: 100px;
-  min-height: 35px;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   cursor: pointer;
 
@@ -217,6 +215,11 @@
   width: 100px;
   height: 30px;
   text-transform: capitalize;
+  width: 84px !important;
+    height: 25px !important;
+    color: #1CDB74;
+    font-size: 12px;
+    border:1px solid #1CDB74;
 }
 
 .btn-rented {
