--- a/src/scss/pages/cart.scss
+++ b/src/scss/pages/cart.scss
@@ -1,12 +1,104 @@
 .cart {
+  li {
+    font-family: Helvetica Neue;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.03em;
+  }
   .cart-header {
     display: flex;
     justify-content: space-between;
     width: 100%;
     align-items: center;
+    .theme-page-title{
+      font-family: Gotham Pro;
+      font-size: 49px;
+      line-height: normal;
+      color: #252525;
+    }
+    .flex-row {
+      .theme-btn-secondery{
+        border: 1px #d3d3d3 solid;
+      }
+    }
 
     button:nth-child(n+2) {
       margin-left: 15px;
+    }
+  }
+  .theme-table {
+    border: 30px #faf8f9 solid;
+    th {
+      padding-top: 39px;
+      padding-bottom: 25px;
+      font-size: 16px;
+      line-height: 27px;
+      border:0;
+      color: #767676;
+      padding-left: 14px;
+
+    }
+    thead {
+      border-bottom: 1px #d3d3d3 solid;
+    }
+    tbody {
+      tr {
+        td {
+          padding: 18px;
+          border: 0;
+
+          img {
+            object-fit: fill;
+            width: 70px;
+            height: 70px;
+          }
+
+        }
+        .tb_brand_model_name {
+          font-size: 17px;
+          font-weight: 600;
+          color: #252525;
+        }
+        .tb_categories_name {
+          font-size: 12px;
+          line-height: 18px;
+          letter-spacing: 0.03em;
+
+          color: #3A3A3A;
+
+          /* Gray */
+          opacity: 0.5;
+        }
+        .tb_time_name {
+          font-size: 17px;
+          color: #252525;
+        }
+        .tb_pay_per {
+          font-size: 17px;
+          font-weight: 600;
+          color: #252525;
+        }
+        .edit_gear_td {
+          padding-right: 0
+        }
+        .edit_gear{
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          margin:0;
+          vertical-align: middle;
+          cursor: pointer;
+          background-image: url('/images/Icons/cart/edit-p.svg');
+        }
+        .close {
+          float: left;
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          vertical-align: middle;
+          background-image: url('/images/Icons/cart/cross-p.svg');
+        }
+      }
     }
   }
 }
