--- a/src/scss/pages/cart.scss
+++ b/src/scss/pages/cart.scss
@@ -1,4 +1,6 @@
 .cart {
+  padding:24px;
+  margin-top: 43px;
   li {
     font-family: Helvetica Neue;
     font-size: 12px;
@@ -105,33 +107,22 @@
 @media(max-width: 1050px) {
   .cart {
     margin-top: 43px !important;
-    .sm-table-cart {
-      border: 30px #faf8f9 solid;
-      th {
-        padding-top: 39px;
-        padding-bottom: 25px;
-        font-size: 16px;
-        line-height: 27px;
+    .cart-table-div{
+      background-color: #faf8f9;
+      padding:20px;
+      padding-bottom: 0;
+      .theme-table {
         border: 0;
-        color: #767676;
-        padding-left: 14px;
-
+        margin:0;
       }
-      thead {
-        border-bottom: 1px #d3d3d3 solid;
-      }
-      tbody {
-        tr {
-          td {
-            padding: 18px;
-            border: 0;
-
-            img {
-              object-fit: fill;
-              width: 70px;
-              height: 70px;
-            }
-
+      .sm-table-cart {
+        border-bottom: #faf8f9 20px solid;
+        .sm-category-list-top{
+          display: flex;
+          margin:18px;
+          align-items: center;
+          p{
+            margin: 0;
           }
           .tb_brand_model_name {
             font-size: 17px;
@@ -142,34 +133,23 @@
             font-size: 12px;
             line-height: 18px;
             letter-spacing: 0.03em;
-
             color: #3A3A3A;
-
-            /* Gray */
             opacity: 0.5;
           }
-          .tb_time_name {
-            font-size: 17px;
-            color: #252525;
+          .sclt_img{
+            magin-right:21px;
           }
-          .tb_pay_per {
-            font-size: 17px;
-            font-weight: 600;
-            color: #252525;
-          }
-          .edit_gear_td {
-            padding-right: 0
-          }
-          .edit_gear {
+          .seclt_edit_icon {
             display: inline-block;
             width: 30px;
             height: 30px;
-            margin: 0;
+            margin:0;
+            margin-right: 12px;
             vertical-align: middle;
             cursor: pointer;
-            background-image: url('/images/Icons/cart/edit-p.svg');
+            background-image: url('/images/Icons/cart/edit-b.svg');
           }
-          .close {
+          .seclt_del_icon {
             float: left;
             display: inline-block;
             width: 30px;
@@ -178,8 +158,57 @@
             background-image: url('/images/Icons/cart/cross-p.svg');
           }
         }
+        .sm-category-list-bottom {
+          display: flex;
+          p {
+            margin:0 !important;
+            padding: 0;
+          }
+          div {
+            border-top: 1px #f5f5f5 solid;
+            padding: 18px;
+          }
+          .cart-bottom-title {
+            font-size: 16px;
+            line-height: 23px;
+            font-weight: 200;
+          }
+          .cart-bottom-title1 {
+            font-size: 12px;
+            line-height: 15px;
+            letter-spacing: 0.03em;
+            color: #3A3A3A;
+            opacity: 0.5;
+          }
+          .cart-bottom-content {
+            font-size: 12px;
+            line-height: 15px;
+            letter-spacing: 0.03em;
+            color: #3A3A3A;
+            opacity: 0.5;
+          }
+          .cart-bottom-content1 {
+            font-family: Gotham Pro;
+            font-size: 16px;
+            line-height: 20px;
+            color: #252525;
+          }
+          .cart-bottom-content2 {
+            font-size: 16px;
+            line-height: 20px;
+            color: #252525;
+            font-weight: 700;
+          }
+          .cart-bottom-second, .cart-bottom-third {
+            border-left:1px #f5f5f5 solid;
+          }
+        }
       }
     }
+  .flex-row {
+    justify-content: center;
+    padding-top:24px;
+  }
   }
   .theme-page-title {
     justify-content: center;
