FavouritesPage responsive update

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -36,5 +36,6 @@
 @import 'components/custom-daterange-picker';
 @import 'pages/partner';
 @import 'pages/FAQ';
+@import 'pages/favourites';
 @import 'pages/editgear';
 @import 'components/cart-modal';
