--- a/src/scss/pages/list-gear.scss
+++ b/src/scss/pages/list-gear.scss
@@ -45,8 +45,9 @@
           .gear_name_first{
             font-family: Helvetica Neue !important;
             font-weight: bold;
-            font-size: 16px;
+            font-size: 17px;
             line-height: 28px;
+            font-weight: 600;
             color: #252525;
             padding:0 !important;
 
